--- a/src/styles/utilities/_index.scss
+++ b/src/styles/utilities/_index.scss
@@ -1,3 +1,11 @@
+@forward "box-shadow";
 @forward "colors";
-@forward "text";
+@forward "container";
+@forward "flex-group";
+@forward "font-families";
+@forward "font-sizes";
+@forward "font-weights";
 @forward "spacing";
+@forward "text";
+@forward "text-center";
+@forward "uppercase";
