--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -5,7 +5,7 @@
 
 @mixin mq($size) {
   @if map.has-key($breakpoints, $size) {
-    $breakpoint: map-get($breakpoints, $size);
+    $breakpoint: map.get($breakpoints, $size);
     @media screen and (min-width: $breakpoint) {
       @content;
     }
@@ -19,5 +19,11 @@
     }
   } @else {
     @error 'the keyword #{$size} is not in the $breakpoints map';
+  }
+}
+
+@mixin grid-column($columns) {
+  &-#{$columns} {
+    grid-template-columns: repeat($columns, 1fr);
   }
 }
