--- a/src/styles/utilities/_container.scss
+++ b/src/styles/utilities/_container.scss
@@ -1,8 +1,10 @@
+@use '../abstracts' as *;
+
 .container {
   --max-width: #{$container-max-width};
   --padding: size(16);
 
-  width: min(var(--max-width), 100% - (var(--padding) * 2));
+  width: min(var(--max-width), 100% - ( var(--padding) * 2) );
   margin-inline: auto;
 }
 
@@ -11,3 +13,4 @@
 }
 
 // create other variations as needed
+
