--- a/src/styles/utilities/_index.scss
+++ b/src/styles/utilities/_index.scss
@@ -2,9 +2,11 @@
 @forward "colors";
 @forward "container";
 @forward "flex-group";
+@forward "flow";
 @forward "font-families";
 @forward "font-sizes";
 @forward "font-weights";
+@forward "lead";
 @forward "spacing";
 @forward "text";
 @forward "text-center";
