--- a/src/styles/utilities/_spacing.scss
+++ b/src/styles/utilities/_spacing.scss
@@ -12,6 +12,14 @@
   margin-inline: auto;
 }
 
+.hero {
+  padding-block: $hero-padding;
+}
+
+.section {
+  padding-block: $section-padding;
+}
+
 @each $size-name, $size-value in $sizes {
   .margin {
     &-#{$size-name} {
