finish markup, begin adding classes

--- a/src/styles/abstracts/_sizes.scss
+++ b/src/styles/abstracts/_sizes.scss
@@ -14,7 +14,7 @@ $section-padding: 7rem;
 
 $card-body-padding: 5rem;
 
-$grid-gap: size(24);
+$grid-gap: 1.5rem;
 $flex-group-gap: 1rem;
 
 $container-inline-padding: 1rem;
