--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -7,8 +7,9 @@
   text-transform: uppercase;
   line-height: 1;
   border: 0;
-
+  font-weight: $fw-700;
   padding: 1.125em 2em;
+  transition: 275ms ease;
 
   &[data-type="accent"] {
     background-color: clr(primary, 400);
@@ -21,5 +22,10 @@
     outline: var(--outline-size) solid clr(neutral, 100);
     outline-offset: calc(var(--outline-size) * -1);
     color: clr(neutral, 100);
+  }
+
+  &:is(:hover, :focus) {
+    background: clr(neutral, 100);
+    color: clr(neutral, 900);
   }
 }
