--- a/src/styles/utilities/_flex-group.scss
+++ b/src/styles/utilities/_flex-group.scss
@@ -3,6 +3,11 @@
 .flex-group {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--flex-gap, #{$flex-group-gap});
+  column-gap: var(--flex-column-gap, #{$flex-group-gap});
+  row-gap: var(--flex-row-gap, calc($flex-group-gap / 2));
   width: fit-content;
+}
+
+.flex-group.mx-auto {
+  justify-content: center;
 }
