--- a/src/styles/layout/_even-columns.scss
+++ b/src/styles/layout/_even-columns.scss
@@ -9,8 +9,17 @@
     margin-inline: auto;
   }
 
-  @include mq(medium) {
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
+  &[data-section="meals"] {
+    @include mq(50em) {
+      grid-auto-flow: column;
+      grid-auto-columns: 1fr;
+    }
+  }
+
+  &[data-section="testimonials"] {
+    @include mq(55em) {
+      grid-auto-flow: column;
+      grid-auto-columns: 1fr;
+    }
   }
 }
