--- a/src/styles/layout/_even-columns.scss
+++ b/src/styles/layout/_even-columns.scss
@@ -9,17 +9,8 @@
     margin-inline: auto;
   }
 
-  &[data-section="meals"] {
-    @include mq(50em) {
-      grid-auto-flow: column;
-      grid-auto-columns: 1fr;
-    }
-  }
-
-  &[data-section="testimonials"] {
-    @include mq(55em) {
-      grid-auto-flow: column;
-      grid-auto-columns: 1fr;
-    }
+  @include mq(medium) {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
   }
 }
