cleanup responsive styles

--- a/src/styles/abstracts/_sizes.scss
+++ b/src/styles/abstracts/_sizes.scss
@@ -18,5 +18,5 @@ $grid-gap: 1.5rem;
 $flex-group-gap: 1rem;
 
 $container-inline-padding: 1rem;
-$container-max-width: 77.5rem;
-$container-max-width-wide: 1400px;
+$container-max-width: 60rem;
+$container-max-width-wide: 75rem;
