--- a/src/styles/components/_section-header.scss
+++ b/src/styles/components/_section-header.scss
@@ -1,10 +1,14 @@
 @use "../abstracts" as *;
 
 .section-header {
+  p {
+    max-width: 40ch;
+  }
+
   &:has(p) {
     margin-block-end: size(36);
   }
-  
+
   &:not(:has(p)) {
     margin-block-end: size(36);
   }
@@ -16,6 +20,14 @@
     width: 10rem;
     height: 1px;
     margin-block: size(36);
+
+    .text-center & {
+      margin-inline: auto;
+    }
+  }
+
+  p {
+    max-width: 50ch;
 
     .text-center & {
       margin-inline: auto;
